# supergoodlookingcubes

./: Cargo.toml
crates/sglc_hotcode/: Cargo.toml
crates/sglc_hotcode/src/: clear.rs  create_vertex_buffer.rs  lib.rs  place_one_sphere.rs  pos_to_index.rs
crates/sglc_shared/: Cargo.toml
crates/sglc_shared/src/: lib.rs
src/: camera_data.rs  command_buffer.rs  create_vertex_buffer.rs  main.rs  pick_physical_device.rs  shaders.rs  test.glsl
src/worlds/: hills.rs  mod.rs  noise.rs  spheres.rs
voxes/: pipes.vox
